--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -967,6 +967,7 @@
                      <li>The driver is in a position to gain a profit or risk a loss from operating the taxi business </li>
                      <li>The has the right to operate a taxicab</li>
                     </ul>
+<p> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed taxi drivers and drivers of other passenger-carrying vehicles, use code 12.</p>   
 
  <p class="mrgn-tp-md">Learn more: <a href="/cra-arc/payroll/calculate/payment/taxi.html">Payments to taxi and other passenger-carrying drivers</a></p>
  </div></details>
@@ -979,6 +980,7 @@
                      <li>??? </li>
                      <li>???</li>
                   </ul>
+<p> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed barber or hairdresser, use code 13.</p>   
  <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/barbers.html">Payments to barbers and hairdressers</a></p>
  </div></details>
 
@@ -1011,32 +1013,10 @@
      <details><summary>17 - Self-employed fishing income</summary>
                <div id="ajax-fish1">
                   <p id="17">Use code 17 if the worker meets all conditions to be a self-employed fisher.</p>
-                                
+                 <p> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed fisher, use code 17.</p>       
                   <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fishers.html">Payments to fishers</a> </p>
 </div></details>
 
-<details><summary>12, 13 or 17 - Indians who are self-employed</summary>
-            <div id="ajax-indian22">
-            <p id="codeindian">We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we use the term Indian because it has a legal meaning in the Indian Act.</p>
-            <p>Payments you made to an Indian who is not your employee may be taxable, tax-exempt, or partly tax-exempt.</p>
-            <ul>
-            <li id="h_2_1"><strong>Taxable or partly tax-exempt self-employment income</strong>
-            <p>If you pay taxable income to a self-employed Indian who works as a:</p>
-            <ul>
-            <li>barber or hairdresser, taxi driver or driver of other passenger-carrying vehicles, see <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a> </li>
-            <li>fisher, see <a href="#fish">Self-employed fishing income</a> </li>
-            </ul>
-            </li>
-            <li id="h_2_2"><strong>Tax-exempt self-employment income</strong>
-            <p>If you pay tax-exempt income to a self-employed Indian worker who is a fisher, barber or hairdresser, a taxi driver or driver of other passenger-carrying vehicles:</p>
-            <ul>
-            <li>you do not have to deduct CPP/QPP contributions </li>
-            <li>you have to pay EI premiums (and PPIP premiums for fishers/workers in Quebec) </li>
-            </ul>
-           
-            </li>
-            </ul>
- </div></details>
 
             </details>
 		 </li>
@@ -1431,7 +1411,7 @@
 			</li>
 
 <li class="code-num"><details> <summary>Code 82 – Taxi drivers and drivers of other passenger-carrying vehicles – Gross income </summary> 
-<p id="cd_82">Report the gross income you paid to a <a href="#taxi1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed taxi drivers and drivers of other passenger-carrying vehicles&nbsp;<span class="far fa-question-circle"></span></a> using code 82. If you report an amount in code 82, you have to enter the employment code 12 using <a href="#12">box 29</a>.</p>
+<p id="cd_82">Report the gross income you paid to a <a href="#taxi1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed taxi driver and driver of other passenger-carrying vehicles&nbsp;<span class="far fa-question-circle"></span></a> using code 82. If you report an amount in code 82, you have to enter the employment code 12 using <a href="#12">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
 
             </details> 
@@ -1475,7 +1455,7 @@
 			</li>
 
 <li class="code-num"><details><summary>Code 88 – Indian (exempt income) – Self-employment <span class="wb-inv">Keywords: Self-employment income Indians indigenous first nations</span> </summary> 
- <p id="cd_88">Report the tax-exempt part of the self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is a fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88. If you report an amount in code 88, you have to enter the appropriate employment code using <a href="#bx_29">box 29</a>.</p>
+ <p id="cd_88">Report the tax-exempt part of the self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is a <a href="#fish1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed fisher&nbsp;<span class="far fa-question-circle"></span></a>, a <a href="#barbers" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed barber or hairdresser&nbsp;<span class="far fa-question-circle"></span></a>, or a <a href="#taxi1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed taxi driver and driver of other passenger-carrying vehicles&nbsp;<span class="far fa-question-circle"></span></a> using code 88. If you report an amount in code 88, you have to enter the appropriate employment code using <a href="#bx_29">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
