--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -705,6 +705,10 @@
 <dt>Province of employment is Quebec</dt>
 <dd> <p>Report amounts you deducted for your employee's share of <abbr title="Employment insurance">EI</abbr> premiums calculated using the Quebec <abbr title="Employment insurance">EI</abbr> rate using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>.</p>
       <p>Learn more: <a href="/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a></p>
+
+<dt>Detached employee - Social security agreement</dt>
+<dd><strong>Do not </strong>report any amount using box 18 if you use employment code 16 in <a href="#bx_29">box 29</a> and no other type of income is reported on the T4 slip. </dd>
+
  </dd>
 </dl>
 
@@ -1003,10 +1007,8 @@
 
   <details> <summary>16 - Detached employee – Social security agreement</summary>
             <div id="ajax-outside1">
-            <p id="16">In situations where you pay CPP on behalf of your employee who is working outside Canada, for all or part of the year, you have to prepare a T4 slip.</p>
-            <p>See box 10 and box 29 for specific instructions.</p>
-            <h4 id="h_0_1">Detached employees</h4>
-            <p>When CPP is paid by the employer on behalf of <strong>detached employees </strong>under employment code 16, leave box 14 blank if no other type of income is reported. Fill in boxes 16 and 26 with the appropriate amounts and leave boxes 18 and 24 blank.</p>
+            <p id="16">Use code 16 if enter in <a href="#bx_10">box 10</a> that your employee worked in a <strong>country other than Canada</strong> using abbreviations US or ZZ, <strong>for all or part of the year</strong>.</p>
+          
             </div>
             </details>
 
@@ -1562,7 +1564,7 @@
             </div>
             </section> 
             <section id="outside1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
-            <header class="modal-header"><h2 class="modal-title">Employees outside Canada</h2></header>
+            <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code 16 - Detached employee – Social security agreement</h2></header>
             <div class="modal-body">
             <div data-ajax-replace="#ajax-outside1"></div>
             </div>
