--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -507,7 +507,7 @@
        <p><strong>Do not </strong>reduce the amount reported in box 14 by the cost or value of saws, trimmers, parts, gasoline, or any other materials the employee supplies.</p></dd>
 
 <dt>Detached employee - Social security agreement</dt>
-<dd><strong>Do not </strong>report any amount using box 14 if you use employment code 16 in <a href="#bx_29">box 29</a> and no other type of income is reported on the T4 slip. You, as the employer, is paying <abbr title="Canada Pension Plan">CPP</abbr> on behalf of the detached employee.</dd>
+<dd><strong>Do not </strong>report any amount using box 14 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span></a> <strong>and no other type of income is reported on the T4 slip</strong>. </dd>
 
 <dt>Employee salary overpayments</dt>
 <dd>Add situation</dd>
@@ -562,7 +562,7 @@
 
 
 <dt>Detached employee - Social security agreement</dt>
-<dd> <p>Report the amount you are paying for your employee <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if box 10 shows their province of employment is other than Quebec.</p>
+<dd> <p>Report the amount you are paying for your employee <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span>. You, as the employer, is paying <abbr title="Canada Pension Plan">CPP</abbr> on behalf of the detached employee.</p>
 
       </dd>
 
@@ -971,7 +971,7 @@
                      <li>The driver is in a position to gain a profit or risk a loss from operating the taxi business </li>
                      <li>The has the right to operate a taxicab</li>
                     </ul>
-<p> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed taxi drivers and drivers of other passenger-carrying vehicles, use code 12.</p>   
+<p class="mrgn-tp-md"> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed taxi drivers and drivers of other passenger-carrying vehicles, use code 12.</p>   
 
  <p class="mrgn-tp-md">Learn more: <a href="/cra-arc/payroll/calculate/payment/taxi.html">Payments to taxi and other passenger-carrying drivers</a></p>
  </div></details>
@@ -984,7 +984,7 @@
                      <li>??? </li>
                      <li>???</li>
                   </ul>
-<p> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed barber or hairdresser, use code 13.</p>   
+<p class="mrgn-tp-md"> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed barber or hairdresser, use code 13.</p>   
  <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/barbers.html">Payments to barbers and hairdressers</a></p>
  </div></details>
 
