--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -562,7 +562,7 @@
 
 
 <dt>Detached employee - Social security agreement</dt>
-<dd> <p>Report the amount you are paying for your employee <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span>. You, as the employer, is paying <abbr title="Canada Pension Plan">CPP</abbr> on behalf of the detached employee.</p>
+<dd> <p>Report the amount you are paying for your employee <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span></a>. You, as the employer, is paying <abbr title="Canada Pension Plan">CPP</abbr> on behalf of the detached employee.</p>
 
       </dd>
 
@@ -707,7 +707,7 @@
       <p>Learn more: <a href="/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a></p>
 
 <dt>Detached employee - Social security agreement</dt>
-<dd><strong>Do not </strong>report any amount using box 18 if you use employment code 16 in <a href="#bx_29">box 29</a> and no other type of income is reported on the T4 slip. </dd>
+<dd><strong>Do not </strong>report any amount using box 18 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span></a> <strong>and no other type of income is reported on the T4 slip</strong>. </dd>
 
  </dd>
 </dl>
