--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -344,7 +344,7 @@
                            </td>
                         </tr>
  			<tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/canada-pension-plan-cpp/employment-outside-canada.html">Employee who is working outside Canada for a Canadian company or the Canadian government </a> </td>
+                           <td><a href="employee-outcanada.html">Employee who is working outside Canada for a Canadian company or the Canadian government </a> </td>
                            <td>Employee situation </td>
                         </tr>
                       <tr>
