--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -985,7 +985,7 @@
                      <li>???</li>
                   </ul>
 <p class="mrgn-tp-md"> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed barber or hairdresser, use code 13.</p>   
- <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/barbers.html">Payments to barbers and hairdressers</a></p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/barbers.html">Payments to barbers and hairdressers</a>  and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained.html">Barbers and hairdressers - CPP/EI explained</a></p>
  </div></details>
 
    <details> <summary>14 -  Withdrawal from a prescribed salary deferral arrangement plan</summary>
@@ -1000,15 +1000,15 @@
 
 <details><summary>15 - Seasonal Agricultural Workers Program</summary>
             <div id="ajax-agri1">
-            
-             <p id="15">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4004/seasonal-agricultural-workers-program.html#P185_18674">Guide RC4004, Seasonal Agricultural Workers Program</a></p>
+              <p>Use code 15 if the worker meets all conditions to be a foreign workers employed in Canada under the Seasonal Agricultural Workers Program.</p>
+             <p id="15">Learn more: <a href="/cra-arc/payroll/calculate/payment/agriculture.html">Payments to agriculture and horticulture workers</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/seasonal-agricultural-workers-program.html">Seasonal Agricultural Workers Program</a></p>
             </div>
             </details>
 
   <details> <summary>16 - Detached employee – Social security agreement</summary>
             <div id="ajax-outside1">
             <p id="16">Use code 16 if enter in <a href="#bx_10">box 10</a> that your employee worked in a <strong>country other than Canada</strong> using abbreviations US or ZZ, <strong>for all or part of the year</strong>.</p>
-          
+           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/employee-outcanada.html">Employee who is working outside Canada for a Canadian company or the Canadian government</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-7.html">Employment outside Canada - CPP/EI explained</a></p>
             </div>
             </details>
 
@@ -1016,7 +1016,7 @@
                <div id="ajax-fish1">
                   <p id="17">Use code 17 if the worker meets all conditions to be a self-employed fisher.</p>
                  <p> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed fisher, use code 17.</p>       
-                  <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fishers.html">Payments to fishers</a> </p>
+                  <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fishers.html">Payments to fishers</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-5.html">Fishers - CPP/EI explained</a></p>
 </div></details>
 
 
