--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -954,7 +954,7 @@
             </ul>
 <p class="mrgn-tp-md">Also use code 11 if you are a placement or employment agency who pays a worker that you place under the direction and control  of one of your clients.</p>
   <p><strong>Do not</strong> use code 11 if you are an agency or the agency's client and the worker is paid self-employment income, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a>.</p>
-            <p class="mrgn-tp-md">Learn more: <a href="/cra-arc/payroll/calculate/payment/temp-help.html">Payments to employee of an employment agency (temporary-help)</a></p>
+            <p class="mrgn-tp-md">Learn more: <a href="/cra-arc/payroll/calculate/payment/temp-help.html">Payments to employee of an employment agency (temporary-help)</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/placement-employment-agencies.html">Placement/employment agencies - CPP/EI explained</a></p>
                      
 	    </div></details>
 
@@ -990,10 +990,11 @@
 
    <details> <summary>14 -  Withdrawal from a prescribed salary deferral arrangement plan</summary>
             <div id="ajax-defer1">
-            <p id="14">A salary deferral arrangement is a plan or arrangement made between an employee and an employer. Under such an arrangement, an employee postpones receiving salary and wages to a later year. Treat the deferred salary and wages as employment income in the year the employee <strong>earns </strong>the amount. Report it on the employee's T4 slip for that year.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Prescribed salary deferral plans or arrangements</a></p>
+            <p id="14">Use code 14 if the payment is for a salary deferral arrangement. This is a plan or arrangement made between an employee and an employer. Under such an arrangement, an employee postpones receiving salary and wages to a later year. Treat the deferred salary and wages as employment income in the year the employee <strong>earns </strong>the amount. Report it on the employee's T4 slip for that year.</p>
+           
             <h4 id="h_prescribed">Prescribed plans or arrangements</h4>
             <p>Prescribed plans or arrangements are not covered by the above salary deferral rules. Treat the deferred amounts in these cases as income in the year the employee <strong>receives </strong>them. Report the income on the employee's T4 slip for that year.</p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>
 
 </div></details>
 
