--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -939,7 +939,7 @@
 </li>
 	
 	
-<li class="code-num"><details> <summary>Box 29 – Employment code <span class="label label-danger">TO DO</span></summary>
+<li class="code-num"><details> <summary>Box 29 – Employment code <span class="label label-info">Jeremiah</span></summary>
             <p id="bx_29">Enter the appropriate employment code in box 29 if one of the following situations applies. Otherwise, leave it blank.</p>
 
   <details><summary>11 - Placement or employment agency workers</summary>
