--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -823,15 +823,12 @@
             </details>
 </li>
 
-<li class="code-num"><details> <summary >Box 26 – CPP/QPP pensionable earnings <span class="label label-danger">TO DO</span></summary>
+<li class="code-num"><details> <summary >Box 26 – CPP/QPP pensionable earnings <span class="label label-info">Jeremiah</span></summary>
  <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings and additional maximum pensionable earnings for the year.</p>
             <p>Report "0" if the employee had no pensionable earnings and you did not report an amount in boxes 16, 16a, 17 or 17a.</p>
 		<p>In many situations, boxes 14 and 26 will be the same amount.</p>
 
           
-	
-
-    
     <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>No <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions deductions required</dt>
