--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -146,12 +146,7 @@
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
-                           <td> <p>Bonus or irregular payments: <span class="label label-default">CVB - SME to review if redirect is sufficient</span></p>
-				      <ul><li>CPP deductions: <a href="/cra-arc/payroll/calculate/how/cpp.html#tab-reg">Paid with regular pay</a> or <a href="/cra-arc/payroll/calculate/how/cpp.html#tab-bonus">paid separately from regular pay</a></li>
-					  <li><a href="/cra-arc/payroll/calculate/how/ei.html#tab-reg">EI deductions</a></li>
-					  <li><a href="/cra-arc/payroll/calculate/how/tax.html#tab-bonus">Income tax deductions</a></li>
-					</ul>
-  </td>
+                           <td> <a href="bonus.html">Bonuses, retroactive pay increases or irregular amounts</a>   </td>
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
