--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -103,8 +103,8 @@
       <a href="advance.html#gc-document-nav" class="visible-xs visible-sm">Advance payments</a></li>
 <li><a href="annuity.html" class="hidden-xs hidden-sm">Annuity payments</a>
       <a href="annuity.html#gc-document-nav" class="visible-xs visible-sm">Annuity payments</a></li>
-<li><a href="bonus.html" class="hidden-xs hidden-sm">Bonus or irregular payments</a>
-      <a href="bonus.html#gc-document-nav" class="visible-xs visible-sm">Bonus or irregular payments</a></li>
+<li><a href="bonus.html" class="hidden-xs hidden-sm">Bonuses, retroactive pay increases or irregular amounts</a>
+      <a href="bonus.html#gc-document-nav" class="visible-xs visible-sm">Bonuses, retroactive pay increases or irregular amounts</a></li>
 <li><a href="commission.html" class="hidden-xs hidden-sm">Commission payments</a>
       <a href="commission.html#gc-document-nav" class="visible-xs visible-sm"> Commission payments </a></li>
 <li><a href="employee-deceased.html" class="hidden-xs hidden-sm">Employee who dies</a>
