--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -312,7 +312,7 @@
                         </tr>
                        
 			 <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/circus-fair-parade-employment.html">Payments to workers at a circus, fair, parade or similar activity</a> </td>
+                           <td><a href="circus.html">Payments to workers at a circus, fair, parade or similar activity</a> </td>
                            <td>Type of employment </td>
                         </tr>
 			                        
