--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -218,6 +218,11 @@
  </a>
 <a href="forestry.html#gc-document-nav" class="visible-xs visible-sm"> Payments to forestry workers for power saws or tree trimmers
 </a></li>
+<li><a href="hunting.html" class="hidden-xs hidden-sm"> Payments to hunting, trapping and forestry workers
+ </a>
+<a href="hunting.html#gc-document-nav" class="visible-xs visible-sm"> Payments to hunting, trapping and forestry workers
+</a></li>
+
 <li><a href="police.html" class="hidden-xs hidden-sm"> Payments to police officers for special or extra duty from third parties
  </a>
 <a href="police.html#gc-document-nav" class="visible-xs visible-sm"> Payments to police officers for special or extra duty from third parties
