--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -298,7 +298,7 @@
                         </tr>
                          
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/hunting-trapping-forestry-logging-lumbering-similar-workers.html">Payments to hunting, trapping and forestry workers</a> </td>
+                           <td><a href="hunting.html">Payments to hunting, trapping and forestry workers</a> </td>
                            <td>Type of employment </td>
                         </tr>
                         <tr>
