--- a/payroll/calculate/benefit/guidance/primary-alt.html
+++ b/payroll/calculate/benefit/guidance/primary-alt.html
@@ -406,7 +406,9 @@
 
   <div id="results" class="hidden">
     <h2>Results based on your answers</h2>
-	 <h3><span class="fas fa-hand-holding-usd text-info fa-lg"></span> Factors indicating that the employee is the primary beneficiary</h3>
+	
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">   <h3><span class="fas fa-hand-holding-usd text-info fa-lg"></span> Factors indicating that the employee is the primary beneficiary</h3>
     <p>Many situations when the employee is the primary beneficiary, the benefit is not tied to the employee's specific employment duties. The benefit is believed to enhance the duties of the job by the employee, but not the employer.</p>
     <p>These include: </p>
     <ol class="mrgn-lft-lg">
@@ -419,8 +421,8 @@
       <li id="q7-ee" class="hidden">An employee's relative or friend used the benefit</li>
       <li id="q8-ee" class="hidden">The benefit is given to other employees with different duties</li>
       <li id="q9-ee" class="hidden">The benefit is only used once</li>
-    </ol> 
-    <h3><span class="fas fa-user-tie text-info fa-lg"></span> Factors indicating that the employer is the primary beneficiary</h3>
+    </ol> </li>
+<li class="cnjnctn-col"> <h3><span class="fas fa-user-tie text-info fa-lg"></span> Factors indicating that the employer is the primary beneficiary</h3>
     <p>Many situations when the employer is the primary beneficiary, the benefit is tied to the employee's specific employment duties. There are also indicators that the job duties may not be possible without the benefit.</p>
     <p>These include:</p>
     <ol class="mrgn-lft-lg">
@@ -433,7 +435,10 @@
       <li id="q7-er" class="hidden">The employee recieved the benefit</li>
       <li id="q8-er" class="hidden">The benefit is not given to other employees, and is tied to a specific employee duties</li>
       <li id="q9-er" class="hidden">The benefit can be used on an ongoing basis</li>
-    </ol>
+    </ol> </li>
+</ul
+
+    
     
   </div>
 	    </details>
