--- a/payroll/calculate/benefit/guidance/primary-alt.html
+++ b/payroll/calculate/benefit/guidance/primary-alt.html
@@ -407,7 +407,7 @@
   <div id="results" class="hidden">
     <h2>Results based on your answers</h2>
 	
- <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+ <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">   <h3><span class="fas fa-hand-holding-usd text-info fa-lg"></span> Factors indicating that the employee is the primary beneficiary</h3>
     <p>Many situations when the employee is the primary beneficiary, the benefit is not tied to the employee's specific employment duties. The benefit is believed to enhance the duties of the job by the employee, but not the employer.</p>
     <p>These include: </p>
