--- a/payroll/calculate/benefit/guidance/primary-alt.html
+++ b/payroll/calculate/benefit/guidance/primary-alt.html
@@ -397,8 +397,8 @@
           <p class="wb-fieldflow-label">Is the benefit something that can be used on an ongoing basis or something that can only be used once? </p>
         </div>
         <ul class="lst-none">
-          <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q9-ee"}, {"action": "removeClass", "source": "#results", "class": "hidden", "live": true}]'>Ongoing</li>
-          <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q9-er"}, {"action": "removeClass", "source": "#results", "class": "hidden", "live": true}]'>Once</li>
+          <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q9-er"}, {"action": "removeClass", "source": "#results", "class": "hidden", "live": true}]'>Ongoing</li>
+          <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q9-ee"}, {"action": "removeClass", "source": "#results", "class": "hidden", "live": true}]'>Once</li>
         </ul>
       </div>
     </div>
