--- a/payroll/calculate/benefit/guidance/primary-alt.html
+++ b/payroll/calculate/benefit/guidance/primary-alt.html
@@ -327,7 +327,7 @@
         <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#results", "class": "hidden", "live": true}}'>
           <div class="wb-fieldflow-header">
             <h3 class="h2 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-user fa-stack-1x"></span> </span> Factor 1: Personal use of benefit</h3>
-            <p class="wb-fieldflow-label">Was there in fact any personal use of the benefit? </p>
+            <p class="wb-fieldflow-label">Q1. Was there in fact any personal use of the benefit? </p>
           </div>
           <ul>
             <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q1-ee"}, {"action": "append", "source": "#q2"}]'>Yes</li>
@@ -336,14 +336,14 @@
         </div>
       </form>
       <div id="q2" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
-        <p>Did the employer place restrictions on the use of the benefit (for example: where and how)? </p>
+        <p>Q2. Did the employer place restrictions on the use of the benefit (for example: where and how)? </p>
         <ul>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q2-er"}, {"action": "append", "source": "#q3"}]'>Yes</li>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q2-ee"}, {"action": "append", "source": "#q3"}]'>No</li>
         </ul>
       </div>
       <div id="q3" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
-        <p>Did the nature of the benefit significantly limit the opportunity for personal use? </p>
+        <p>Q3. Did the nature of the benefit significantly limit the opportunity for personal use? </p>
         <ul>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q3-er"}, {"action": "append", "source": "#q4"}]'>Yes</li>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q3-ee"}, {"action": "append", "source": "#q4"}]'>No</li>
@@ -352,7 +352,7 @@
       <div id="q4" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
         <div class="wb-fieldflow-header">
           <h3 class="h2 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-chart-line fa-stack-1x"></span> </span> Factor 2: Use in benefit in employment</h3>
-          <p class="wb-fieldflow-label">Did the employee's work productivity improve because of the benefit?</p>
+          <p class="wb-fieldflow-label">Q4. Did the employee's work productivity improve because of the benefit?</p>
         </div>
         <ul class="lst-none">
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q4-er"}, {"action": "append", "source": "#q5"}]'>Yes</li>
@@ -360,14 +360,14 @@
         </ul>
       </div>
       <div id="q5" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
-        <p>Is it possible for the employee to do their job without the benefit or a replacement?</p>
+        <p>Q5. Is it possible for the employee to do their job without the benefit or a replacement?</p>
         <ul>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q5-ee"}, {"action": "append", "source": "#q6"}]'>Yes</li>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q5-er"}, {"action": "append", "source": "#q6"}]'>No</li>
         </ul>
       </div>
       <div id="q6" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
-        <p>Is it usual for employers in this industry to provide this benefit to employees to allow those employees to more effectively perform the duties of employment?</p>
+        <p>Q6. Is it usual for employers in this industry to provide this benefit to employees to allow those employees to more effectively perform the duties of employment?</p>
         <ul>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q6-er"}, {"action": "append", "source": "#q7"}]'>Yes</li>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q6-ee"}, {"action": "append", "source": "#q7"}]'>No</li>
@@ -376,7 +376,7 @@
       <div id="q7" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
         <div class="wb-fieldflow-header">
           <h3 class="h2 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-hands-helping fa-stack-1x"></span> </span> Factor 3: Recipient of benefit</h3>
-          <p class="wb-fieldflow-label">Who received the benefit?</p>
+          <p class="wb-fieldflow-label">Q7. Who received the benefit?</p>
           <p class="text-mute small">If more than one person received the benefit, you need to consider each person separately. Family members include spouses, children, siblings, parents, cousins, uncles, aunts, and grandparents.</p>
         </div>
         <ul>
@@ -385,7 +385,7 @@
         </ul>
       </div>
       <div id="q8" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
-        <p>Was the benefit available to all employes, all employees with different duties, or all employees at specific pay level or seniority)?</p>
+        <p>Q8. Was the benefit available to all employes, all employees with different duties, or all employees at specific pay level or seniority)?</p>
         <ul>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q8-ee"}, {"action": "append", "source": "#q9"}]'>Yes</li>
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q8-er"}, {"action": "append", "source": "#q9"}]'>No</li>
@@ -394,7 +394,7 @@
       <div id="q9" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
         <div class="wb-fieldflow-header">
           <h3 class="h2 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-calendar-check fa-stack-1x"></span> </span> Factor 4: Lifespan of benefit</h3>
-          <p class="wb-fieldflow-label">Is the benefit something that can be used on an ongoing basis or something that can only be used once? </p>
+          <p class="wb-fieldflow-label">Q9. Is the benefit something that can be used on an ongoing basis or something that can only be used once? </p>
         </div>
         <ul class="lst-none">
           <li data-wb-fieldflow='[{"action": "toggle", "live": true, "toggle": "#q9-er"}, {"action": "removeClass", "source": "#results", "class": "hidden", "live": true}]'>Ongoing</li>
@@ -411,31 +411,31 @@
 <li class="cnjnctn-col">   <h3><span class="fas fa-hand-holding-usd text-info fa-lg"></span> Factors indicating that the employee is the primary beneficiary</h3>
     <p>Many situations when the employee is the primary beneficiary, the benefit is not tied to the employee's specific employment duties. The benefit is believed to enhance the duties of the job by the employee, but not the employer.</p>
     <p>These include: </p>
-    <ol class="mrgn-lft-lg">
-      <li id="q1-ee" class="hidden">There was personal use of the benefit</li>
-      <li id="q2-ee" class="hidden">No restrictions on the ability of the employee to use the benefit for personal use</li>
-      <li id="q3-ee" class="hidden">No limit on the ability of the benefit to be used for personal use</li>
-      <li id="q4-ee" class="hidden">The benefit does not affect or improves employee's work productivity</li>
-      <li id="q5-ee" class="hidden">The employee would of used or purchased the benefit regardless of their specific duties</li>
-      <li id="q6-ee" class="hidden">It is not common in the industry to provide the benefit as it has little or no effect on performace of duties</li>
-      <li id="q7-ee" class="hidden">An employee's relative or friend used the benefit</li>
-      <li id="q8-ee" class="hidden">The benefit is given to other employees with different duties</li>
-      <li id="q9-ee" class="hidden">The benefit is only used once</li>
-    </ol> </li>
+    <ul class="mrgn-lft-lg">
+      <li id="q1-ee" class="hidden">A1. There was personal use of the benefit</li>
+      <li id="q2-ee" class="hidden">A2. No restrictions on the ability of the employee to use the benefit for personal use</li>
+      <li id="q3-ee" class="hidden">A3. No limit on the ability of the benefit to be used for personal use</li>
+      <li id="q4-ee" class="hidden">A4. The benefit does not affect or improves employee's work productivity</li>
+      <li id="q5-ee" class="hidden">A5. The employee would of used or purchased the benefit regardless of their specific duties</li>
+      <li id="q6-ee" class="hidden">A6. It is not common in the industry to provide the benefit as it has little or no effect on performace of duties</li>
+      <li id="q7-ee" class="hidden">A7. An employee's relative or friend used the benefit</li>
+      <li id="q8-ee" class="hidden">A8. The benefit is given to other employees with different duties</li>
+      <li id="q9-ee" class="hidden">A9. The benefit is only used once</li>
+    </ul> </li>
 <li class="cnjnctn-col"> <h3><span class="fas fa-user-tie text-info fa-lg"></span> Factors indicating that the employer is the primary beneficiary</h3>
     <p>Many situations when the employer is the primary beneficiary, the benefit is tied to the employee's specific employment duties. There are also indicators that the job duties may not be possible without the benefit.</p>
     <p>These include:</p>
-    <ol class="mrgn-lft-lg">
-      <li id="q1-er" class="hidden">No personal use of the benefit</li>
-      <li id="q2-er" class="hidden">Restrictions were placed on the use of benefit to avoid personal use</li>
-      <li id="q3-er" class="hidden">The nature of the benefit was meant for business use</li>
-      <li id="q4-er" class="hidden">The  benefit improves the employee's work productivity</li>
-      <li id="q5-er" class="hidden">The job duties being fulfilled would not be possible without the benefit </li>
-      <li id="q6-er" class="hidden">It is common in the industry to provide the benefit to allow employees to more effectively perform their duties</li>
-      <li id="q7-er" class="hidden">The employee recieved the benefit</li>
-      <li id="q8-er" class="hidden">The benefit is not given to other employees, and is tied to a specific employee duties</li>
-      <li id="q9-er" class="hidden">The benefit can be used on an ongoing basis</li>
-    </ol> </li>
+    <ul class="mrgn-lft-lg">
+      <li id="q1-er" class="hidden">A1. No personal use of the benefit</li>
+      <li id="q2-er" class="hidden">A2. Restrictions were placed on the use of benefit to avoid personal use</li>
+      <li id="q3-er" class="hidden">A3. The nature of the benefit was meant for business use</li>
+      <li id="q4-er" class="hidden">A4. The benefit improves the employee's work productivity</li>
+      <li id="q5-er" class="hidden">A5. The job duties being fulfilled would not be possible without the benefit </li>
+      <li id="q6-er" class="hidden">A6. It is common in the industry to provide the benefit to allow employees to more effectively perform their duties</li>
+      <li id="q7-er" class="hidden">A7. The employee recieved the benefit</li>
+      <li id="q8-er" class="hidden">A8. The benefit is not given to other employees, and is tied to a specific employee duties</li>
+      <li id="q9-er" class="hidden">A9. The benefit can be used on an ongoing basis</li>
+    </ul> </li>
 </ul
 
     
