--- a/payroll/calculate/benefit/guidance/primary-alt.html
+++ b/payroll/calculate/benefit/guidance/primary-alt.html
@@ -411,30 +411,30 @@
 <li class="cnjnctn-col">   <h3><span class="fas fa-hand-holding-usd text-info fa-lg"></span> Factors indicating that the employee is the primary beneficiary</h3>
     <p>Many situations when the employee is the primary beneficiary, the benefit is not tied to the employee's specific employment duties. The benefit is believed to enhance the duties of the job by the employee, but not the employer.</p>
     <p>These include: </p>
-    <ul class="mrgn-lft-lg">
-      <li id="q1-ee" class="hidden">A1. There was personal use of the benefit</li>
-      <li id="q2-ee" class="hidden">A2. No restrictions on the ability of the employee to use the benefit for personal use</li>
-      <li id="q3-ee" class="hidden">A3. No limit on the ability of the benefit to be used for personal use</li>
-      <li id="q4-ee" class="hidden">A4. The benefit does not affect or improves employee's work productivity</li>
-      <li id="q5-ee" class="hidden">A5. The employee would of used or purchased the benefit regardless of their specific duties</li>
-      <li id="q6-ee" class="hidden">A6. It is not common in the industry to provide the benefit as it has little or no effect on performace of duties</li>
-      <li id="q7-ee" class="hidden">A7. An employee's relative or friend used the benefit</li>
-      <li id="q8-ee" class="hidden">A8. The benefit is given to other employees with different duties</li>
-      <li id="q9-ee" class="hidden">A9. The benefit is only used once</li>
+     <ul class="fa-ul mrgn-lft-md"> 
+      <li id="q1-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A1. There was personal use of the benefit</li>
+      <li id="q2-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A2. No restrictions on the ability of the employee to use the benefit for personal use</li>
+      <li id="q3-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A3. No limit on the ability of the benefit to be used for personal use</li>
+      <li id="q4-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A4. The benefit does not affect or improves employee's work productivity</li>
+      <li id="q5-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A5. The employee would of used or purchased the benefit regardless of their specific duties</li>
+      <li id="q6-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A6. It is not common in the industry to provide the benefit as it has little or no effect on performace of duties</li>
+      <li id="q7-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A7. An employee's relative or friend used the benefit</li>
+      <li id="q8-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A8. The benefit is given to other employees with different duties</li>
+      <li id="q9-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A9. The benefit is only used once</li>
     </ul> </li>
 <li class="cnjnctn-col"> <h3><span class="fas fa-user-tie text-info fa-lg"></span> Factors indicating that the employer is the primary beneficiary</h3>
     <p>Many situations when the employer is the primary beneficiary, the benefit is tied to the employee's specific employment duties. There are also indicators that the job duties may not be possible without the benefit.</p>
     <p>These include:</p>
-    <ul class="mrgn-lft-lg">
-      <li id="q1-er" class="hidden">A1. No personal use of the benefit</li>
-      <li id="q2-er" class="hidden">A2. Restrictions were placed on the use of benefit to avoid personal use</li>
-      <li id="q3-er" class="hidden">A3. The nature of the benefit was meant for business use</li>
-      <li id="q4-er" class="hidden">A4. The benefit improves the employee's work productivity</li>
-      <li id="q5-er" class="hidden">A5. The job duties being fulfilled would not be possible without the benefit </li>
-      <li id="q6-er" class="hidden">A6. It is common in the industry to provide the benefit to allow employees to more effectively perform their duties</li>
-      <li id="q7-er" class="hidden">A7. The employee recieved the benefit</li>
-      <li id="q8-er" class="hidden">A8. The benefit is not given to other employees, and is tied to a specific employee duties</li>
-      <li id="q9-er" class="hidden">A9. The benefit can be used on an ongoing basis</li>
+      <ul class="fa-ul mrgn-lft-md"> 
+      <li id="q1-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A1. No personal use of the benefit</li>
+      <li id="q2-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A2. Restrictions were placed on the use of benefit to avoid personal use</li>
+      <li id="q3-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A3. The nature of the benefit was meant for business use</li>
+      <li id="q4-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A4. The benefit improves the employee's work productivity</li>
+      <li id="q5-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A5. The job duties being fulfilled would not be possible without the benefit </li>
+      <li id="q6-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A6. It is common in the industry to provide the benefit to allow employees to more effectively perform their duties</li>
+      <li id="q7-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A7. The employee recieved the benefit</li>
+      <li id="q8-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A8. The benefit is not given to other employees, and is tied to a specific employee duties</li>
+      <li id="q9-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A9. The benefit can be used on an ongoing basis</li>
     </ul> </li>
 </ul
 
