--- a/payroll/calculate/benefit/guidance/primary-alt.html
+++ b/payroll/calculate/benefit/guidance/primary-alt.html
@@ -326,7 +326,7 @@
 		  
         <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#results", "class": "hidden", "live": true}}'>
           <div class="wb-fieldflow-header">
-            <h3 class="h3 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-user fa-stack-1x"></span> </span> Factor 1: Personal use of benefit</h3>
+            <h3 class="h2 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-user fa-stack-1x"></span> </span> Factor 1: Personal use of benefit</h3>
             <p class="wb-fieldflow-label">Q1. Was there in fact any personal use of the benefit? </p>
           </div>
           <ul>
@@ -351,7 +351,7 @@
       </div>
       <div id="q4" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
         <div class="wb-fieldflow-header">
-          <h3 class="h3 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-chart-line fa-stack-1x"></span> </span> Factor 2: Use in benefit in employment</h3>
+          <h3 class="h2 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-chart-line fa-stack-1x"></span> </span> Factor 2: Use in benefit in employment</h3>
           <p class="wb-fieldflow-label">Q4. Did the employee's work productivity improve because of the benefit?</p>
         </div>
         <ul class="lst-none">
@@ -375,7 +375,7 @@
       </div>
       <div id="q7" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
         <div class="wb-fieldflow-header">
-          <h3 class="h3 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-hands-helping fa-stack-1x"></span> </span> Factor 3: Recipient of benefit</h3>
+          <h3 class="h2 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-hands-helping fa-stack-1x"></span> </span> Factor 3: Recipient of benefit</h3>
           <p class="wb-fieldflow-label">Q7. Who received the benefit?</p>
           <p class="text-mute small">If more than one person received the benefit, you need to consider each person separately. Family members include spouses, children, siblings, parents, cousins, uncles, aunts, and grandparents.</p>
         </div>
@@ -393,7 +393,7 @@
       </div>
       <div id="q9" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}' class="wb-fieldflow-sub hidden">
         <div class="wb-fieldflow-header">
-          <h3 class="h3 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-calendar-check fa-stack-1x"></span> </span> Factor 4: Lifespan of benefit</h3>
+          <h3 class="h2 mrgn-tp-md text-info row" id="personal"> <span class="fa fa-stack fa-sm"><span class="far fa-circle fa-stack-2x "></span> <span class="fas fa-calendar-check fa-stack-1x"></span> </span> Factor 4: Lifespan of benefit</h3>
           <p class="wb-fieldflow-label">Q9. Is the benefit something that can be used on an ongoing basis or something that can only be used once? </p>
         </div>
         <ul class="lst-none">
@@ -411,7 +411,7 @@
 <li class="cnjnctn-col">   <h3><span class="fas fa-hand-holding-usd text-info fa-lg"></span> Factors indicating that the employee is the primary beneficiary</h3>
     <p>Many situations when the employee is the primary beneficiary, the benefit is not tied to the employee's specific employment duties. The benefit is believed to enhance the duties of the job by the employee, but not the employer.</p>
     <p>These include: </p>
-     <ul class="fa-ul mrgn-lft-md"> 
+     <ul class="fa-ul mrgn-lft-lg"> 
       <li id="q1-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A1. There was personal use of the benefit</li>
       <li id="q2-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A2. No restrictions on the ability of the employee to use the benefit for personal use</li>
       <li id="q3-ee" class="hidden"><span class="fas fa-check text-success fa-li"></span> A3. No limit on the ability of the benefit to be used for personal use</li>
@@ -425,7 +425,7 @@
 <li class="cnjnctn-col"> <h3><span class="fas fa-user-tie text-info fa-lg"></span> Factors indicating that the employer is the primary beneficiary</h3>
     <p>Many situations when the employer is the primary beneficiary, the benefit is tied to the employee's specific employment duties. There are also indicators that the job duties may not be possible without the benefit.</p>
     <p>These include:</p>
-      <ul class="fa-ul mrgn-lft-md"> 
+      <ul class="fa-ul mrgn-lft-lg"> 
       <li id="q1-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A1. No personal use of the benefit</li>
       <li id="q2-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A2. Restrictions were placed on the use of benefit to avoid personal use</li>
       <li id="q3-er" class="hidden"><span class="fas fa-check text-success fa-li"></span> A3. The nature of the benefit was meant for business use</li>
