--- a/payroll/calculate/benefit/guidance/primary-alt.html
+++ b/payroll/calculate/benefit/guidance/primary-alt.html
@@ -296,7 +296,7 @@
     <p>You may provide your employees with benefits (directly or indirectly), in the form of cash, goods, services, allowances, or reimbursements.</p>
     <p>You need to consider multiple factors to determine if the primary beneficiary of the benefit is the employer or the employee. </p>
     <blockquote><p>Where something is provided to an employee primarily for the benefit of the employer, it is not a taxable benefit if any personal enjoyment is merely incidental to the business purpose.</p>
-		<footer><cite>Income Tax Act</cite></footer>
+		<footer><cite>Income Tax Act, 6(1)(a)</cite></footer>
 	</blockquote>
     <h2 class="h3">On this page</h2>
     <ul>
@@ -318,7 +318,7 @@
     <div id="interactive">
 		<div class="mrgn-lft-md mrgn-rght-md">
       <h3 class="mrgn-tp-md">Answer 9 questions to gather the facts</h3>
-      <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
+      <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results. This tool is anonymous. The CRA does not collect any details of those using the tool.</p>
 			</div>
      <div class="wb-frmvld gc-font-2019 mrgn-lft-md mrgn-rght-md">
       <form>
