--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1365,15 +1365,11 @@
 </li>
 		
 <li class="code-num"><details><summary >Code 78 – Fishers – Gross income </summary> 
-            <p id="cd_78">Report the gross income you paid to a <a href="#fish1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed fisher&nbsp;<span class="far fa-question-circle"></span></a> using code 78. If you report an amount in code 78, you have to enter the employment code 17 using <a href="#17">box 29</a>. </p>
-
-<h4>Specific situations</h4>
-<dl class="dl-horizontal">
-<dt>Type 1 fishers</dt>
-<dd>Also report the net partnership amount if the fisher is a type 1 using <a href="#cd_79">code 79</a></dd>
-<dt>Type 2 fishers</dt>
-<dd>Also report the shareperson amount if the fisher is a type 2 using <a href="#cd_80">code 80</a>  </dd>
-</dl>
+            <p id="cd_78">Report the gross income you paid to a <a href="#fish1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed fisher&nbsp;<span class="far fa-question-circle"></span></a> using code 78. If you report an amount in code 78, you have to enter the employment code 17 using <a href="#17">box 29</a>. Also report:</p>
+<ul>
+<li>The net partnership amount if the fisher is a type 1 using <a href="#cd_79">code 79</a></li>
+<li>The shareperson amount if the fisher is a type 2 using <a href="#cd_80">code 80</a> </li>
+</ul>
 
 <p><strong>Do not </strong>report this amount in box 14.</p>  
           
@@ -1381,29 +1377,22 @@
 			</li>
 
 <li class="code-num"><details><summary >Code 79 – Fishers – Net partnership amount </summary> 
-            <p id="cd_79">Report the net partnership amount if you paid a type 1 fisher using code 79. If you report an amount in code 79, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
-
-<h4>Specific situations</h4>
-<dl class="dl-horizontal">
-<dt>Province of employment is other than Quebec</dt>
-<dd>Also report the same amount using <a href="#bx_24">box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec. </dd>
-<dt>Province of employment is Quebec</dt>
-<dd>Also report the same amount using <a href="#bx_56">box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec.</dd>
-</dl>
+            <p id="cd_79">Report the net partnership amount if you paid a type 1 fisher using code 79. If you report an amount in code 79, you have to report the gross income using <a href="#cd_78">code 78</a>. Also report the same amount using :</p>
+<ul>
+<li><a href="#bx_24">box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec.</li>
+<li><a href="#bx_56">box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec </li>
+</ul>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
            
             </details> 
 			</li>
 
 <li class="code-num"><details><summary>Code 80 – Fishers – Shareperson amount </summary> 
-            <p id="cd_80">Report the shareperson amount if you paid a type 2 fisher using code 80. If you report an amount in code 80, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
-          <h4>Specific situations</h4>
-<dl class="dl-horizontal">
-<dt>Province of employment is other than Quebec</dt>
-<dd>Also report the same amount using <a href="#bx_24">box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec. </dd>
-<dt>Province of employment is Quebec</dt>
-<dd>Also report the same amount using <a href="#bx_56">box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec.</dd>
-</dl>
+            <p id="cd_80">Report the shareperson amount if you paid a type 2 fisher using code 80. If you report an amount in code 80, you have to report the gross income using <a href="#cd_78">code 78</a>. Also report the same amount using :</p>
+<ul>
+<li><a href="#bx_24">box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec.</li>
+<li><a href="#bx_56">box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec </li>
+</ul>
 <p><strong>Do not </strong>report this amount in box 14.</p>
             </details> 
 			</li>
