--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1371,7 +1371,7 @@
 <li>The shareperson amount if the fisher is a type 2 using <a href="#cd_80">code 80</a> </li>
 </ul>
 
-<p><strong>Do not </strong>report this amount in box 14.</p>  
+<p <p class="mrgn-tp-md">><strong>Do not </strong>report this amount in box 14.</p>  
           
             </details> 
 			</li>
@@ -1379,8 +1379,8 @@
 <li class="code-num"><details><summary >Code 79 – Fishers – Net partnership amount </summary> 
             <p id="cd_79">Report the net partnership amount if you paid a type 1 fisher using code 79. If you report an amount in code 79, you have to report the gross income using <a href="#cd_78">code 78</a>. Also report the same amount using :</p>
 <ul>
-<li><a href="#bx_24">box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec.</li>
-<li><a href="#bx_56">box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec </li>
+<li><a href="#bx_24">Box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec.</li>
+<li><a href="#bx_56">Box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec </li>
 </ul>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
            
@@ -1390,8 +1390,8 @@
 <li class="code-num"><details><summary>Code 80 – Fishers – Shareperson amount </summary> 
             <p id="cd_80">Report the shareperson amount if you paid a type 2 fisher using code 80. If you report an amount in code 80, you have to report the gross income using <a href="#cd_78">code 78</a>. Also report the same amount using :</p>
 <ul>
-<li><a href="#bx_24">box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec.</li>
-<li><a href="#bx_56">box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec </li>
+<li><a href="#bx_24">Box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec.</li>
+<li><a href="#bx_56">Box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec </li>
 </ul>
 <p><strong>Do not </strong>report this amount in box 14.</p>
             </details> 
