--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1457,17 +1457,17 @@
 <dt>Partly tax-exempt </dt>
 <dd><p>Report the tax-exempt part of the self-employment income using code 88 <strong>and</strong> the taxable self-employment income using:</p>
 <ul>
-<li><a href="#78">code 78</a>, <a href="#79">code 79</a> and <a href="#80">code 80</a> for a fisher </li>
-<li><a href="#82">code 82</a> for a taxi driver or driver of other passenger carrying vehicle </li>
-<li><a href="#83">code 83</a> for a barber and hairdresser</li>
+<li><a href="#78">Code 78</a>, <a href="#79">code 79</a> and <a href="#80">code 80</a> for a fisher </li>
+<li><a href="#82">Code 82</a> for a taxi driver or driver of other passenger carrying vehicle </li>
+<li><a href="#83">Code 83</a> for a barber and hairdresser</li>
 </ul>
 </dd>
 <dt>Fully taxable</dt>
 <dd><p><strong>Do not</strong> report fully taxable self-employment income using code 88, use:</p>
 <ul>
-<li><a href="#78">code 78</a>, <a href="#79">code 79</a> and <a href="#80">code 80</a> for a fisher </li>
-<li><a href="#82">code 82</a> for a taxi driver or driver of other passenger carrying vehicle </li>
-<li><a href="#83">code 83</a> for a barber and hairdresser</li>
+<li><a href="#78">Code 78</a>, <a href="#79">code 79</a> and <a href="#80">code 80</a> for a fisher </li>
+<li><a href="#82">Code 82</a> for a taxi driver or driver of other passenger carrying vehicle </li>
+<li><a href="#83">Code 83</a> for a barber and hairdresser</li>
 </ul>
 </dd>
 </dl>
