--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -292,6 +292,8 @@
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
    <h4>Employee and employer identification</h4>
+  <p class="text-muted small">  <a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></p>
+
    <li class="code-num mrgn-lft-md">	<details><summary >Year </summary>
             <p id="yr">Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
             </details>
@@ -309,7 +311,7 @@
 		</details>
 		</li>
 
-	<li class="code-num"><details> <summary>Employee's name and address </summary>
+	<li class="code-num mrgn-lft-md"><details> <summary>Employee's name and address </summary>
             <p id="mply_nm_ddrss">Enter all in capital letters the employee's last name followed by the employee's first name and initials.</p>
             <p>If the employee has more than one initial, enter the employee’s first name followed by the initials in the ‘First name’ space.</p>
             <p> <strong>Do not enter </strong>titles, such as Director, Mr., or Mrs. </p>
@@ -317,7 +319,7 @@
             </details>
 </li>
 
-	<li class="code-num"><details> <summary>Box 10 – Province of employment </summary>
+	<li class="code-num mrgn-lft-md"><details> <summary>Box 10 – Province of employment </summary>
             <p  id="bx_10">Enter the provincial or territorial abbreviation for the province or territory of employment. This is not always the province where the employer is located. </p>
             <details><summary>List of provinces and territories and their abbreviations</summary>
             <table class="table table-striped small table-condensed">
@@ -407,7 +409,7 @@
             </details>
 		    </li>
 	
-	<li class="code-num"> <details><summary >Box 12 – Social insurance number (SIN) </summary>
+	<li class="code-num mrgn-lft-md"> <details><summary >Box 12 – Social insurance number (SIN) </summary>
             <p id="bx_12">Enter the SIN provided by the employee.</p>
            <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -423,7 +425,7 @@
 </li>
 		
    <h4>Income and deduction</h4>
-	<li class="code-num"> <details>  <summary>Box 14 – Employment income <span class="label label-info">Jeremiah</span></summary>
+	<li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income <span class="label label-info">Jeremiah</span></summary>
             <p id="bx_14">Report your employee's total income before deductions using box 14. </p>
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
  <details> <summary>Type of payment included in employment income </summary>
@@ -522,7 +524,7 @@
             </details>
 </li>
 
-<li class="code-num">
+<li class="code-num mrgn-lft-md">
 	<details>
             <summary id="bx_22">Box 22 – Income tax deducted </summary>
 <p>Report the amount of income tax you deducted from your employee using box 22. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
@@ -1481,6 +1483,12 @@
 			</ul>
             </section>
 
+ <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def">
+            <header class="modal-header"><h2 class="modal-title">View sample - Employer and employee identification</h2></header>
+            <div class="modal-body">
+            <div data-ajax-replace="cra-arc/payroll/file/images/ident.JPG"></div>
+            </div>
+            </section>  
 
             <section id="taxi1" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code 12 - Self-employed taxi drivers and drivers of other passenger-carrying vehicles</h2></header>
@@ -1571,6 +1579,8 @@
             <div data-ajax-replace="#ajax-overpaid1"></div>
             </div>
             </section>
+
+
 
 <section id="exception" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Exceptions list</h2>
 	</header>	<div class="modal-body">		
