--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -291,14 +291,14 @@
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
-   <h4>Employee and employer identification</h4>
-  <p class="text-muted small">  <a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></p>
+   <h4>Employee and employer identification </h4>
+  <p class="text-muted small mrgn-lft-md"> <a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></p>
 
    <li class="code-num mrgn-lft-md">	<details><summary >Year </summary>
             <p id="yr">Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
             </details>
 		</li>
-		<li class="code-num">
+		<li class="code-num  mrgn-lft-md">
             <details>
             <summary id="mplyr_nm">Employer's name </summary>
             <p>Enter your legal name, your operating or trading name (if it differs from your legal name) and address.</p>
@@ -1486,7 +1486,7 @@
  <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">View sample - Employer and employee identification</h2></header>
             <div class="modal-body">
-            <div data-ajax-replace="cra-arc/payroll/file/images/ident.JPG"></div>
+            <div data-ajax-replace="/cra-arc/payroll/file/images/ident.JPG"></div>
             </div>
             </section>  
 
