--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -291,9 +291,8 @@
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
-   <h4>Employee and employer identification </h4>
-  <p class="text-muted small mrgn-lft-md"> <a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></p>
-
+   <h4>Employee and employer identification <small><a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small> </h4>
+ 
    <li class="code-num mrgn-lft-md">	<details><summary >Year </summary>
             <p id="yr">Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
             </details>
