--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1488,9 +1488,9 @@
  <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">View sample - Employer and employee identification</h2></header>
             <div class="modal-body">
-           
+            
  <a class="wb-lbx" href="images/ident.JPG" title="Employer and employee identification">
-                        <img src="images/ident.jpg" alt="Employer and employee identification" class="img-responsive mrgn-bttm-lg" />
+                        <img src="images/ident.JPG" alt="Employer and employee identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
             </section>  
