--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -291,7 +291,7 @@
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
-   <h4>Employee and employer identification <small><a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small> </h4>
+   <h4>Identification <small><a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small> </h4>
  
    <li class="code-num mrgn-lft-md">	<details><summary >Year </summary>
             <p id="yr">Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
@@ -1486,11 +1486,11 @@
             </section>
 
  <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def">
-            <header class="modal-header"><h2 class="modal-title">View sample - Employer and employee identification</h2></header>
+            <header class="modal-header"><h2 class="modal-title">View sample - Identification</h2></header>
             <div class="modal-body">
             
- <a class="wb-lbx" href="images/ident.JPG" title="Employer and employee identification">
-                        <img src="images/ident.JPG" alt="Employer and employee identification" class="img-responsive mrgn-bttm-lg" />
+ <a class="wb-lbx" href="images/ident.JPG" title="Identification">
+                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
             </section>  
